<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ItemDetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/pixel_google"
                android:adjustViewBounds="true"
                android:scaleType="fitXY" />

        </FrameLayout>

        <TextView
            style="@style/TextContent.Subtittle"
            android:text="@string/dummy_stock"
            android:textSize="12sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            />
        <TextView
            android:id="@+id/persentase"
            style="@style/TextContent.Black"
            android:textSize="32sp"
            android:text="@string/dummy_price"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"/>


        <TextView
            style="@style/TextContent.Subtittle"
            android:text="@string/dummy_spesifikasi"
            android:textSize="12sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="8dp" />

        <TextView
            style="@style/TextContent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:lineSpacingMultiplier="1"
            android:text="@string/content_text"
            android:textColor="@android:color/black" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="Panjang" />
                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_display"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="Lebar"
                    />
                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_size"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="Tinggi" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/content_specs_battery"
                    android:textColor="@android:color/black"
                    />
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/TextContent.Subtittle"
            android:text="Marketing"
            android:layout_marginBottom="8dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/photo_2"
                android:layout_centerVertical="true"
                android:id="@+id/profile_image"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>
            <TextView
                style="@style/TextContent"
                android:layout_toRightOf="@id/profile_image"
                android:layout_toEndOf="@id/profile_image"
                android:text="@string/dummy_nama"
                android:textColor="@android:color/black"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/btnKirimPesan"
            style="@style/ButtonGeneral1"
            android:text="Kirim Pesan"/>
    </LinearLayout>

</ScrollView>